updated misc links to https

--- a/src/site/art/index.njk
+++ b/src/site/art/index.njk
@@ -1,6 +1,6 @@
 ---
 layout: page.njk
-title: Artwork by James Nash
+title: Artwork
 additionalCss: art.css
 description: Drawings, doodles and designs by James Nash, organised into convenient, themed galleries.
 keywords:
