--- a/src/site/art/nasher/index.njk
+++ b/src/site/art/nasher/index.njk
@@ -58,7 +58,7 @@ eleventyNavigation:
     <li><a href="pics/9lives_combo.jpg"><img src="9lives_combo.jpg" alt="Nasher 9 Lives logo" /> <span>Nasher 9 Lives logo design</span></a></li>
     <li><a href="pics/djnasher_vol1.jpg"><img src="djnasher_vol1.jpg" alt="DJ Nasher Volume 1" /> <span>Album cover for DJ Nasher "Volume 1" sampler CD</span></a></li>
     <li><a href="pics/djnasher_vol2.jpg"><img src="djnasher_vol2.jpg" alt="DJ Nasher Volume 2" /> <span>Album cover for DJ Nasher "Volume 2" sampler CD</span></a></li>
-    <li><a href="http://www.flickr.com/photos/james_nash/3151250030/"><img src="djnasher_warehouse.jpg" alt="DJ Nasher Warehouse" /> <span>DJ Nasher warehouse wallpaper</span></a></li>
+    <li><a href="https://www.flickr.com/photos/james_nash/3151250030/"><img src="djnasher_warehouse.jpg" alt="DJ Nasher Warehouse" /> <span>DJ Nasher warehouse wallpaper</span></a></li>
   </ul>
-  <p class="break">If you like the Vol1 &amp; 2 album covers, you can also get them in widescreen wallpaper format: <a href="http://www.flickr.com/photos/james_nash/3771215603/">DJ Nasher Volume 1 desktop wallpaper</a> &amp; <a href="http://www.flickr.com/photos/james_nash/3771215639/">DJ Nasher Volume 2 desktop wallpaper</a>. Enjoy!</p>
+  <p class="break">If you like the Vol1 &amp; 2 album covers, you can also get them in widescreen wallpaper format: <a href="https://www.flickr.com/photos/james_nash/3771215603/">DJ Nasher Volume 1 desktop wallpaper</a> &amp; <a href="https://www.flickr.com/photos/james_nash/3771215639/">DJ Nasher Volume 2 desktop wallpaper</a>. Enjoy!</p>
 </div>
