--- a/src/site/art/twiddles/index.njk
+++ b/src/site/art/twiddles/index.njk
@@ -21,8 +21,8 @@ eleventyNavigation:
   <ul class="gallery">
     <li><a href="pics/twiddles_logo.jpg"><img src="twiddles_logo.jpg" alt="Twiddles Logo" /> <span>Current Twiddles logo.</span></a></li>
     <li><a href="pics/twiddles_network.jpg"><img src="twiddles_network.jpg" alt="Twiddles Network Logo" /> <span>"Twiddles Network" logo.</span></a></li>
-    <li><a href="http://twiddles.deviantart.com/art/Twiddles-Doodles-120812492"><img src="doodles.jpg" alt="Twiddles Doodles" /> <span>Collage of doodles with Twiddles branding.</span></a></li>
-    <li><a href="http://twiddles.deviantart.com/art/Twiddles-Doodle-Invert-120813086"><img src="doodles_inverted.jpg" alt="Inverted Twiddles Doodles" /> <span>Inverted version of the Twiddles doodles.</span></a></li>
+    <li><a href="https://twiddles.deviantart.com/art/Twiddles-Doodles-120812492"><img src="doodles.jpg" alt="Twiddles Doodles" /> <span>Collage of doodles with Twiddles branding.</span></a></li>
+    <li><a href="https://twiddles.deviantart.com/art/Twiddles-Doodle-Invert-120813086"><img src="doodles_inverted.jpg" alt="Inverted Twiddles Doodles" /> <span>Inverted version of the Twiddles doodles.</span></a></li>
   </ul>
   <p class="break">Please feel free to share them! Also, any links to <a href="https://www.twiddles.com/">Twiddles</a> would be much appreciated!</p>
 </div>
