--- a/src/site/blog/index.njk
+++ b/src/site/blog/index.njk
@@ -1,6 +1,6 @@
 ---
 layout: page.njk
-title: James Nash on the Blog
+title: On the Blog
 description: Blog posts by James Nash. Mostly musings and ramblings about mobile phone technology.
 keywords:
   - blog
