--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -58,8 +58,8 @@ changeFreq: weekly
 	</div>
 	<div class="box">
 		<h2>About James Nash's site</h2>
-		<p>The design you see before you now was released in 2009. It was the first major re-design of this site since this website launched in 2002. I lovingly hand-coded all the <a href="http://www.w3.org/TR/xhtml1/">XHTML</a> and <a href="http://www.w3.org/TR/CSS2/">CSS</a>. All the graphicswere made in <a href="https://www.gimp.org/">GIMP</a>.</p>
-    <p>Originally, there was (very simple) a back-end written in <a href="http://www.php.net/">PHP</a> and it was all hosted on <a href="http://event-horizon.cyberfinity.net/">my own webserver</a> . However, as of June 2020 that setup has been replaced with an <a href="https://www.11ty.dev/">11ty</a>-powered static site build that gets deployed via <a href="https://www.netlify.com/">Netlify</a>.</p>
+		<p>The design you see before you now was released in 2009. It was the first major re-design of this site since this website launched in 2002. I lovingly hand-coded all the <a href="https://www.w3.org/TR/xhtml1/">XHTML</a> and <a href="https://www.w3.org/TR/CSS2/">CSS</a>. All the graphicswere made in <a href="https://www.gimp.org/">GIMP</a>.</p>
+    <p>Originally, there was (very simple) a back-end written in <a href="https://www.php.net/">PHP</a> and it was all hosted on <a href="http://event-horizon.cyberfinity.net/">my own webserver</a> . However, as of June 2020 that setup has been replaced with an <a href="https://www.11ty.dev/">11ty</a>-powered static site build that gets deployed via <a href="https://www.netlify.com/">Netlify</a>.</p>
     <p>
 	</div>
 </div>
