--- a/src/site/links/index.njk
+++ b/src/site/links/index.njk
@@ -1,6 +1,6 @@
 ---
 layout: page.njk
-title: James Nash's Links
+title: Links
 description: James Nash's links to sites of friends, projects or just stuff he finds interesting and amusing.
 keywords:
   - friends
@@ -24,6 +24,6 @@ changeFreq: monthly
 		<li><a href="https://udt.design/">Universal Design Tokens</a> - a project I started in 2018 with the goal of defining a standard file format for exchanging design tokens.</li>
 		<li><a href="https://www.twiddles.com/">Twiddles</a> - <q>Coming soon</q>, honest guv'!</li>
 		<li><a href="https://shop.spreadshirt.co.uk/twiddles/">The official Twiddles shop</a>!</li>
-		<li><a href="http://adonthell.nongnu.org/">Adonthell</a>. A cool, open-source RPG adventure game.</li>
+		<li><a href="https://adonthell.nongnu.org/">Adonthell</a>. A cool, open-source RPG adventure game.</li>
 	</ul>
 </div>
