Added RSS format feed

--- a/src/site/_templates/page.njk
+++ b/src/site/_templates/page.njk
@@ -22,7 +22,8 @@
     {%- if robots.nofollow or robots.noindex %}
     <meta name="robots" content="{{ 'nofollow' if robots.nofollow }}{{ ', ' if (robots.nofollow and robots.noindex) }}{{ 'noindex' if robots.noindex }}">
     {%- endif %}
-    <link rel="alternate" type="application/atom+xml" href="https://cirrus.twiddles.com/feed.atom" />
+    <link rel="alternate" type="application/atom+xml" href="https://cirrus.twiddles.com/feed.atom" title="Cirrus's Realm: On the blog (Atom feed)" />
+    <link rel="alternate" type="application/rss+xml" href="https://cirrus.twiddles.com/feed.rss" title="Cirrus's Realm: On the blog (RSS feed)" />
   {%- endblock %}
 	</head>
 	<body>
