added smartphone show 2008 posts

--- a/src/site/blog/index.njk
+++ b/src/site/blog/index.njk
@@ -82,11 +82,7 @@ permalink: "blog/{% if pagination.pageNumber > 0 %}page-{{ pagination.pageNumber
                 <li><a href="https://wiprodigital.com/2016/03/17/implementing-atomic-design-at-wipro-digital/">Implementing Atomic Design at Wipro Digital</a>, 17. March 2016</li>
             </ul>
         </li>
-        <li>Some really old stuff I did while working at Symbian:
-            <ul>
-                <li><a href="https://smartphoneshow.wordpress.com/">Symbian Smartphone Show Blog</a>. Coverage of the 2008 Smartphone Show.</li>
-                <li><a href="https://web.archive.org/web/20110202185319/http://blog.symbian.org/">Symbian Foundation Blog</a>. (Now defunct. I wrote some of the original posts when the blog started and also created the <a href="https://web.archive.org/web/20090405043504/http://blog.symbian.org:80/2009/04/01/symbian-based-toaster-announced/">Symbian Toaster April Fool's</a>)</li>
-            </ul>
+        <li><a href="https://web.archive.org/web/20110202185319/http://blog.symbian.org/">Symbian Foundation Blog</a>. (Now defunct. I wrote some of the original posts when the blog started and also created the <a href="https://web.archive.org/web/20090405043504/http://blog.symbian.org:80/2009/04/01/symbian-based-toaster-announced/">Symbian Toaster April Fool's</a>)
         </li>
     </ul>
   </div>
