--- a/src/assets/style/screen.css
+++ b/src/assets/style/screen.css
@@ -76,6 +76,11 @@ figcaption {
   font-size: smaller;
 }
 
+ins {
+  text-decoration: none;
+  font-style: italic;
+}
+
 .break {
 	clear: both;
 }
@@ -192,6 +197,10 @@ div.box {
 
 
 /* Blog post content */
+.post {
+  overflow: hidden;
+}
+
 .post img {
   display: block;
   max-width: 100%;
@@ -201,6 +210,43 @@ div.box {
 
 .post figure img {
   margin-bottom: 0.5em;
+}
+
+.post .inset-img {
+  display: block;
+  float: right;
+  margin: 0.4em 0 0.25em 1em;
+}
+
+.inset-img img {
+  margin: 0;
+}
+
+.img-strip {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 0.5em;
+  margin-bottom: 1em;
+}
+
+.img-strip img {
+  margin: 0;
+}
+
+.youtube-embed {
+  width: 100%;
+  position: relative;
+  padding-top: 56.25%;
+}
+
+.youtube-embed iframe {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /* Links to blog post with title, date and summary */
@@ -339,8 +385,6 @@ span.big-link {
   content: '>>';
   right: 0.25rem;
 }
-
-
 
 @media screen and (min-width: 550px) {
 
