fixed xhtml validation error

--- a/src/site/_templates/partials/blog-post-link.njk
+++ b/src/site/_templates/partials/blog-post-link.njk
@@ -5,6 +5,6 @@
     <a href="{{ blogPost.url }}">{{ blogPost.data.title }}</a>
   </div>
   <small class="post-link__date">Posted on {% humanDate blogPost.date %}</small>
-  <p>{{ blogPost.data.summary }}
+  <p>{{ blogPost.data.summary }}</p>
 </div>
 {% endmacro %}
