fixed xhtml validation errors

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -43,7 +43,7 @@ changeFreq: weekly
       <li>{{ blogPostLink(blogPost) | safe }}</li>
     {% endfor %}
     </ul>
-    <hr>
+    <hr />
     <p>Browse all posts on <a href="/blog/">the blog</a></p>
   </div>
 	<div class="box">
@@ -60,13 +60,12 @@ changeFreq: weekly
 		<h2>About James Nash's site</h2>
 		<p>The design you see before you now was released in 2009. It was the first major re-design of this site since this website launched in 2002. I lovingly hand-coded all the <a href="https://www.w3.org/TR/xhtml1/">XHTML</a> and <a href="https://www.w3.org/TR/CSS2/">CSS</a>. All the graphicswere made in <a href="https://www.gimp.org/">GIMP</a>.</p>
     <p>Originally, there was (very simple) a back-end written in <a href="https://www.php.net/">PHP</a> and it was all hosted on <a href="http://event-horizon.cyberfinity.net/">my own webserver</a> . However, as of June 2020 that setup has been replaced with an <a href="https://www.11ty.dev/">11ty</a>-powered static site build that gets deployed via <a href="https://www.netlify.com/">Netlify</a>.</p>
-    <p>
 	</div>
 </div>
 <div id="secondary-content">
 	<div class="box">
 		<h2>James Nash's Work</h2>
-    <p>I currently work in a design system team at a large investment bank. Previously I was a creative technologist for a large consultancy firm, a UX consultant and a mobile software developer. I live at the intersection of UX and technology and help people from each of those disciplines better collaborate.</p>
+    <p>I currently work in a design system team at a specialist bank. Previously I was a creative technologist for a large consultancy firm, a UX consultant and a mobile software developer. I live at the intersection of UX and technology and help people from each of those disciplines better collaborate.</p>
     <p><strong>Unless clearly stated otherwise</strong>, everything I say and write on this site and elsewhere online is my own, <em>personal</em> opinion and <strong>in no way represents the views of my past or present employers</strong>!</p>
 		<p>To network professionally, please check out my: <a href="https://www.linkedin.com/in/jamescnash" id="linkedin" rel="me">LinkedIn profile.</a> Please note that I usually only accept people as a new contact if I've actually met them in real life!</p>
 		<h3>Shameless book plug</h3>
