--- a/src/site/_templates/page.njk
+++ b/src/site/_templates/page.njk
@@ -1,6 +1,6 @@
 {% from 'partials/main-nav.njk' import mainNav -%}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-GB">
 	<head profile="http://gmpg.org/xfn/11">
   {%- block head %}
 		<title>{% if customTitle %}{{ customTitle }}{% else %}{{ title }} | Cirrus's Realm{% endif %}</title>
