added ds webring to links page

--- a/src/site/links/index.njk
+++ b/src/site/links/index.njk
@@ -22,8 +22,21 @@ changeFreq: monthly
 	<p>Here's a random selection of links of things I have done or am involved in:</p>
 	<ul>
 		<li><a href="https://udt.design/">Universal Design Tokens</a> - a project I started in 2018 with the goal of defining a standard file format for exchanging design tokens.</li>
+    <li><a href="https://www.cyberfinity.net/">Cyberfinity</a> - Miscellaneous little sites I run</li>
 		<li><a href="https://www.twiddles.com/">Twiddles</a> - <q>Coming soon</q>, honest guv'!</li>
 		<li><a href="https://shop.spreadshirt.co.uk/twiddles/">The official Twiddles shop</a>!</li>
 		<li><a href="https://adonthell.nongnu.org/">Adonthell</a>. A cool, open-source RPG adventure game.</li>
 	</ul>
+
+  <h2>Webrings</h2>
+  <p>Cirrus's Realm is a proud member of the following web rings:</p>
+  <nav class="design-systems-webring" aria-labelledby="design-systems-webring">
+    <h3 id="design-systems-webring">Design Systems Webring</h2>
+    <p>This site is part of <a rel="external" href="https://design-system.club/">Design Systems Webring</a>.</p>
+    <ul>
+      <li><a referrerpolicy="strict-origin" href="https://design-system.club/prev">Previous website</a></li>
+      <li><a referrerpolicy="strict-origin" href="https://design-system.club/random">Random website</a></li>
+      <li><a referrerpolicy="strict-origin" href="https://design-system.club/next">Next website</a></li>
+    </ul>
+  </nav>
 </div>
