updated bio and social links on homepage

--- a/src/site/home.css
+++ b/src/site/home.css
@@ -54,6 +54,10 @@
 	background: url('mastodon.png') no-repeat 2px 2px;
 }
 
+#bluesky {
+	background: url('bluesky.png') no-repeat 2px 2px;
+}
+
 #badges {
 	list-style-type: none;
 }
