--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -19,7 +19,7 @@ keywords:
 eleventyNavigation:
   key: Home
   order: 1
-  titleAttr: James Nash - arty phone geek
+  titleAttr: James Nash
 priority: 1
 changeFreq: weekly
 ---
@@ -27,8 +27,9 @@ changeFreq: weekly
 <div id="main-content">
 	<div class="box">
 		<h2>James Nash in a nutshell</h2>
-		<p>Hi there! My name is <strong>James Nash</strong> and this is my personal website. It's primarily a place for me to share things I have made, am involved in or just find interesting with the world. Who knows, perhaps it will also let long lost acquaintances find me and get in touch.</p>
-		<p>I chose the subtitle "<em>arty phone geek</em>" because it was the most concise summary of myself that I could think of:</p>
+		<p>Hi there! My name is <strong>James Nash</strong> and this is my personal website.  I'm a design system nerd, classically trained webmaster and occasional fashion terrorist.</p>
+    <p>This site primarily a place for me to share things I have made, am involved in or just find interesting with the world. Who knows, perhaps it will also let long lost acquaintances find me and get in touch.</p>
+		<p>A little about me</p>
 		<ul>
 			<li>I like drawing, doing graphics on the computer and just generally making stuff that looks nice (amazingly, some people seem to think I'm good at it too! I'll let you <a href="/art/">judge for yourself</a> though).</li>
 			<li>I like gadgets and gizmos, in particular mobile phones (it's like having all the other gadgets combined into one!).</li>
@@ -52,6 +53,7 @@ changeFreq: weekly
 		<ul class="social">
       <li><a href="https://mstdn.social/@cirrus" id="mastodon" rel="me">Follow James Nash on Mastodon</a></li>
       <li><a href="/feed.atom" id="feed">Subscribe in your favourite RSS reader</a></li>
+      <li><a href="https://bsky.app/profile/cirrus.twiddles.com" id="bluesky" rel="me">Follow James Nash on Bluesky</a></li>
 		</ul>
 		<p class="break">Please note that I probably won't follow / add / whatever you back automatically unless I actually know you from <a href="http://catb.org/jargon/html/M/meatspace.html">meatspace</a>! Call me old-skool if you like, but I don't want every Tom, Dick and Harry seeing photos of me on a night out! :-P</p>
 		<p>Oh yeah, incase you're wondering, I've not bothered with MySpace since I have a perfectly good "space" here (and one that doesn't look like someone barfed all over your browser either)!</p>
@@ -65,7 +67,7 @@ changeFreq: weekly
 <div id="secondary-content">
 	<div class="box">
 		<h2>James Nash's Work</h2>
-    <p>I currently work in a design system team at a specialist bank. Previously I was a creative technologist for a large consultancy firm, a UX consultant and a mobile software developer. I live at the intersection of UX and technology and help people from each of those disciplines better collaborate.</p>
+    <p>I am currently the tech lead for Investec's design system. I previously worked in various design system, UX and software dev roles at a variety of companies. I live at the intersection of UX and technology and help people from each of those disciplines better collaborate.</p>
     <p><strong>Unless clearly stated otherwise</strong>, everything I say and write on this site and elsewhere online is my own, <em>personal</em> opinion and <strong>in no way represents the views of my past or present employers</strong>!</p>
 		<p>To network professionally, please check out my: <a href="https://www.linkedin.com/in/jamescnash" id="linkedin" rel="me">LinkedIn profile.</a> Please note that I usually only accept people as a new contact if I've actually met them in real life!</p>
 		<h3>Shameless book plug</h3>
