added dtcg link

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -27,7 +27,7 @@ changeFreq: weekly
 <div id="main-content">
 	<div class="box">
 		<h2>James Nash in a nutshell</h2>
-		<p>Hi there! My name is <strong>James Nash</strong> and this is my personal website.  I'm a design system nerd, classically trained webmaster and occasional fashion terrorist.</p>
+		<p>Hi there! My name is <strong>James Nash</strong> and this is my personal website.  I'm a design system nerd, classically trained webmaster and occasional fashion terrorist. IN my spare time, I'm also one of the editors of the [Design Tokens Community Group](https://www.designtokens.org/) (DTCG) [format specification](https://tr.designtokens.org/format/).</p>
     <p>This site primarily a place for me to share things I have made, am involved in or just find interesting with the world. Who knows, perhaps it will also let long lost acquaintances find me and get in touch.</p>
 		<p>A little about me</p>
 		<ul>
